// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentItems tests should load the DocumentItems component 1`] = `
<Loader>
  <Error>
    <ResultsTable
      fixed={false}
      headerActionClickHandler={null}
      headerActionComponent={null}
      rowActionClickHandler={[Function]}
      rows={Array []}
      seeAllComponent={
        <SeeAllButton
          clickHandler={[Function]}
          disabled={false}
          fluid={false}
        />
      }
      showMaxRows={5}
      singleLine={false}
      subtitle=""
      title="Attached items"
    />
  </Error>
</Loader>
`;

exports[`DocumentItems tests should render item 1`] = `
<DocumentItems
  data={
    Object {
      "hits": Array [
        Object {
          "ID": "item1",
          "document_pid": "doc1",
          "item_pid": "item1",
          "location": "Somewhere",
          "updated": "2018-01-01T10:05:00.000Z",
        },
        Object {
          "ID": "item2",
          "document_pid": "doc2",
          "item_pid": "item2",
          "location": "Somewhere",
          "updated": "2018-01-01T10:05:00.000Z",
        },
      ],
      "total": 2,
    }
  }
  document={
    Object {
      "metadata": Object {
        "document_pid": 111,
      },
    }
  }
  fetchDocumentItems={[Function]}
  history={[Function]}
  showMaxItems={5}
>
  <Loader>
    <Error>
      <ResultsTable
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        rowActionClickHandler={[Function]}
        rows={
          Array [
            Object {
              "Barcode": undefined,
              "ID": "item1",
              "Location": "Somewhere",
              "Medium": undefined,
              "Shelf": undefined,
              "Status": undefined,
              "Updated": "2018-01-01 10:05",
            },
            Object {
              "Barcode": undefined,
              "ID": "item2",
              "Location": "Somewhere",
              "Medium": undefined,
              "Shelf": undefined,
              "Status": undefined,
              "Updated": "2018-01-01 10:05",
            },
          ]
        }
        seeAllComponent={
          <SeeAllButton
            clickHandler={[Function]}
            disabled={false}
            fluid={false}
          />
        }
        showMaxRows={5}
        singleLine={false}
        subtitle=""
        title="Attached items"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={13}
                    >
                      <div
                        className="middle aligned thirteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Attached items"
                          subheader=""
                        >
                          <h3
                            className="ui header"
                          >
                            Attached items
                            <HeaderSubheader
                              content=""
                            >
                              <div
                                className="sub header"
                              />
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={3}
                    >
                      <div
                        className="right aligned three wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Table
              as="table"
              selectable={true}
              striped={true}
            >
              <table
                className="ui selectable striped table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Updated",
                      "Barcode",
                      "Medium",
                      "Status",
                      "Location",
                      "Shelf",
                    ]
                  }
                  withRowAction={true}
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            collapsing={true}
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              collapsing={true}
                              width={2}
                            >
                              <th
                                className="collapsing two wide"
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              width={2}
                            >
                              <th
                                className="two wide"
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Updated"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Updated
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Barcode"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Barcode
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Medium"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Medium
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Status"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Status
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Location"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Location
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Shelf"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Shelf
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      "ID",
                      "Updated",
                      "Barcode",
                      "Medium",
                      "Status",
                      "Location",
                      "Shelf",
                    ]
                  }
                  rowActionClickHandler={[Function]}
                  rows={
                    Array [
                      Object {
                        "Barcode": undefined,
                        "ID": "item1",
                        "Location": "Somewhere",
                        "Medium": undefined,
                        "Shelf": undefined,
                        "Status": undefined,
                        "Updated": "2018-01-01 10:05",
                      },
                      Object {
                        "Barcode": undefined,
                        "ID": "item2",
                        "Location": "Somewhere",
                        "Medium": undefined,
                        "Shelf": undefined,
                        "Status": undefined,
                        "Updated": "2018-01-01 10:05",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="item1"
                        key="item1"
                      >
                        <tr
                          className=""
                          data-test="item1"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                data-test="btn-view-details-item1"
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  data-test="btn-view-details-item1"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-item1"
                            key="0-item1"
                          >
                            <td
                              className=""
                              data-test="ID-item1"
                            >
                              item1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Updated-item1"
                            key="1-item1"
                          >
                            <td
                              className=""
                              data-test="Updated-item1"
                            >
                              2018-01-01 10:05
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Barcode-item1"
                            key="2-item1"
                          >
                            <td
                              className=""
                              data-test="Barcode-item1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Medium-item1"
                            key="3-item1"
                          >
                            <td
                              className=""
                              data-test="Medium-item1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Status-item1"
                            key="4-item1"
                          >
                            <td
                              className=""
                              data-test="Status-item1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Location-item1"
                            key="5-item1"
                          >
                            <td
                              className=""
                              data-test="Location-item1"
                            >
                              Somewhere
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Shelf-item1"
                            key="6-item1"
                          >
                            <td
                              className=""
                              data-test="Shelf-item1"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="item2"
                        key="item2"
                      >
                        <tr
                          className=""
                          data-test="item2"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                data-test="btn-view-details-item2"
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  data-test="btn-view-details-item2"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-item2"
                            key="0-item2"
                          >
                            <td
                              className=""
                              data-test="ID-item2"
                            >
                              item2
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Updated-item2"
                            key="1-item2"
                          >
                            <td
                              className=""
                              data-test="Updated-item2"
                            >
                              2018-01-01 10:05
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Barcode-item2"
                            key="2-item2"
                          >
                            <td
                              className=""
                              data-test="Barcode-item2"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Medium-item2"
                            key="3-item2"
                          >
                            <td
                              className=""
                              data-test="Medium-item2"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Status-item2"
                            key="4-item2"
                          >
                            <td
                              className=""
                              data-test="Status-item2"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Location-item2"
                            key="5-item2"
                          >
                            <td
                              className=""
                              data-test="Location-item2"
                            >
                              Somewhere
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Shelf-item2"
                            key="6-item2"
                          >
                            <td
                              className=""
                              data-test="Shelf-item2"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={7}
                  seeAllComponent={
                    <SeeAllButton
                      clickHandler={[Function]}
                      disabled={false}
                      fluid={false}
                    />
                  }
                  showMaxRows={5}
                />
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentItems>
`;

exports[`DocumentItems tests should render show a message with no items 1`] = `
<DocumentItems
  data={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  document={
    Object {
      "metadata": Object {
        "document_pid": 111,
      },
    }
  }
  fetchDocumentItems={[Function]}
  history={[Function]}
  showMaxItems={5}
>
  <Loader>
    <Error>
      <ResultsTable
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        rowActionClickHandler={[Function]}
        rows={Array []}
        seeAllComponent={
          <SeeAllButton
            clickHandler={[Function]}
            disabled={false}
            fluid={false}
          />
        }
        showMaxRows={5}
        singleLine={false}
        subtitle=""
        title="Attached items"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={13}
                    >
                      <div
                        className="middle aligned thirteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Attached items"
                          subheader=""
                        >
                          <h3
                            className="ui header"
                          >
                            Attached items
                            <HeaderSubheader
                              content=""
                            >
                              <div
                                className="sub header"
                              />
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={3}
                    >
                      <div
                        className="right aligned three wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Message
              data-test="no-results"
            >
              <div
                className="ui message"
                data-test="no-results"
              >
                There are no 
              </div>
            </Message>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentItems>
`;

exports[`DocumentItems tests should render the see all button when showing only a few items 1`] = `
<DocumentItems
  data={
    Object {
      "hits": Array [
        Object {
          "ID": "1",
          "document_pid": "doc1",
          "item_pid": "item1",
          "location": "Somewhere",
          "updated": "2018-01-01T10:05:00.000Z",
        },
        Object {
          "ID": "2",
          "document_pid": "doc2",
          "item_pid": "item2",
          "location": "Somewhere",
          "updated": "2018-01-01T10:05:00.000Z",
        },
      ],
      "total": 2,
    }
  }
  document={
    Object {
      "metadata": Object {
        "document_pid": 111,
      },
    }
  }
  fetchDocumentItems={[Function]}
  history={[Function]}
  showMaxItems={1}
>
  <Loader>
    <Error>
      <ResultsTable
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        rowActionClickHandler={[Function]}
        rows={
          Array [
            Object {
              "Barcode": undefined,
              "ID": "item1",
              "Location": "Somewhere",
              "Medium": undefined,
              "Shelf": undefined,
              "Status": undefined,
              "Updated": "2018-01-01 10:05",
            },
            Object {
              "Barcode": undefined,
              "ID": "item2",
              "Location": "Somewhere",
              "Medium": undefined,
              "Shelf": undefined,
              "Status": undefined,
              "Updated": "2018-01-01 10:05",
            },
          ]
        }
        seeAllComponent={
          <SeeAllButton
            clickHandler={[Function]}
            disabled={false}
            fluid={false}
          />
        }
        showMaxRows={1}
        singleLine={false}
        subtitle=""
        title="Attached items"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={13}
                    >
                      <div
                        className="middle aligned thirteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Attached items"
                          subheader=""
                        >
                          <h3
                            className="ui header"
                          >
                            Attached items
                            <HeaderSubheader
                              content=""
                            >
                              <div
                                className="sub header"
                              />
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={3}
                    >
                      <div
                        className="right aligned three wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Table
              as="table"
              selectable={true}
              striped={true}
            >
              <table
                className="ui selectable striped table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Updated",
                      "Barcode",
                      "Medium",
                      "Status",
                      "Location",
                      "Shelf",
                    ]
                  }
                  withRowAction={true}
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            collapsing={true}
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              collapsing={true}
                              width={2}
                            >
                              <th
                                className="collapsing two wide"
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              width={2}
                            >
                              <th
                                className="two wide"
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Updated"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Updated
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Barcode"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Barcode
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Medium"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Medium
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Status"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Status
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Location"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Location
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Shelf"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Shelf
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      "ID",
                      "Updated",
                      "Barcode",
                      "Medium",
                      "Status",
                      "Location",
                      "Shelf",
                    ]
                  }
                  rowActionClickHandler={[Function]}
                  rows={
                    Array [
                      Object {
                        "Barcode": undefined,
                        "ID": "item1",
                        "Location": "Somewhere",
                        "Medium": undefined,
                        "Shelf": undefined,
                        "Status": undefined,
                        "Updated": "2018-01-01 10:05",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="item1"
                        key="item1"
                      >
                        <tr
                          className=""
                          data-test="item1"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                data-test="btn-view-details-item1"
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  data-test="btn-view-details-item1"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-item1"
                            key="0-item1"
                          >
                            <td
                              className=""
                              data-test="ID-item1"
                            >
                              item1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Updated-item1"
                            key="1-item1"
                          >
                            <td
                              className=""
                              data-test="Updated-item1"
                            >
                              2018-01-01 10:05
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Barcode-item1"
                            key="2-item1"
                          >
                            <td
                              className=""
                              data-test="Barcode-item1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Medium-item1"
                            key="3-item1"
                          >
                            <td
                              className=""
                              data-test="Medium-item1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Status-item1"
                            key="4-item1"
                          >
                            <td
                              className=""
                              data-test="Status-item1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Location-item1"
                            key="5-item1"
                          >
                            <td
                              className=""
                              data-test="Location-item1"
                            >
                              Somewhere
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Shelf-item1"
                            key="6-item1"
                          >
                            <td
                              className=""
                              data-test="Shelf-item1"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={7}
                  seeAllComponent={
                    <SeeAllButton
                      clickHandler={[Function]}
                      disabled={false}
                      fluid={false}
                    />
                  }
                  showMaxRows={1}
                >
                  <TableFooter
                    as="tfoot"
                    data-test="footer"
                    fullWidth={true}
                  >
                    <TableHeader
                      as="tfoot"
                      data-test="footer"
                      fullWidth={true}
                    >
                      <tfoot
                        className="full-width"
                        data-test="footer"
                      >
                        <TableRow
                          as="tr"
                          cellAs="td"
                        >
                          <tr
                            className=""
                          >
                            <TableHeaderCell
                              as="th"
                              colSpan={8}
                              textAlign="right"
                            >
                              <TableCell
                                as="th"
                                className=""
                                colSpan={8}
                                textAlign="right"
                              >
                                <th
                                  className="right aligned"
                                  colSpan={8}
                                >
                                  <span>
                                    Showing first 
                                    1
                                     entries of
                                     
                                    2
                                     
                                  </span>
                                  <span>
                                    <SeeAllButton
                                      clickHandler={[Function]}
                                      disabled={false}
                                      fluid={false}
                                    >
                                      <Button
                                        as="button"
                                        onClick={[Function]}
                                        size="small"
                                      >
                                        <button
                                          className="ui small button"
                                          onClick={[Function]}
                                        >
                                          See all
                                        </button>
                                      </Button>
                                    </SeeAllButton>
                                  </span>
                                </th>
                              </TableCell>
                            </TableHeaderCell>
                          </tr>
                        </TableRow>
                      </tfoot>
                    </TableHeader>
                  </TableFooter>
                </ResultsTableFooter>
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentItems>
`;
